After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 671441 - couldn't change login-keyring password on seahorse 3.3...
couldn't change login-keyring password on seahorse 3.3...
Status: RESOLVED FIXED
Product: seahorse
Classification: Applications
Component: general
3.3.x
Other Linux
: Normal major
: ---
Assigned To: Seahorse Maintainer
Seahorse Maintainer
Depends on:
Blocks:
 
 
Reported: 2012-03-06 04:47 UTC by Hirotaka Maruyama
Modified: 2012-03-08 20:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Error dialog on seahorse 3.3 (111.46 KB, image/png)
2012-03-06 04:47 UTC, Hirotaka Maruyama
Details
gdb log with seahorse (1.25 KB, application/octet-stream)
2012-03-06 05:20 UTC, Hirotaka Maruyama
Details

Description Hirotaka Maruyama 2012-03-06 04:47:57 UTC
Created attachment 209047 [details]
Error dialog on seahorse 3.3

I have an issue on gnome-keyring 3.3 and seahorse 3.3.

Yeah whenever I want to change my "login-keyring" password via seahorse, it showed the worning dialog:

"couldn't change keyring password"
"Error communicating with gnome-keyring-daemon"

see details in here:
http://ubuntuforums.org/showthread.php?t=1936161
I've already attached screenshot showed that dialog error messages


[OS]
Ubuntu 12.04 LTS beta1 X86-64 (amd64)

Regards,
Tista
Comment 1 Hirotaka Maruyama 2012-03-06 05:20:54 UTC
Created attachment 209049 [details]
gdb log with seahorse

Attached the output of gdb with seahorse... :)
Comment 2 Hirotaka Maruyama 2012-03-06 05:25:46 UTC
OMG... this massage could not recorded above log.. grrrr :(

"Gkr-Message: call to daemon returned an invalid response: (null).(null)()"
Comment 3 Jeremy Bicha 2012-03-07 05:01:08 UTC
I can confirm this on Fedora 17. This bug is concerning as the Ubuntu developers are evaluating whether to upgrade to gnome-keyring/seahorse 3.4 for Ubuntu 12.04.

https://bugs.launchpad.net/ubuntu/+source/gnome-keyring/+bug/947447
Comment 4 Stef Walter 2012-03-08 20:47:29 UTC
Thanks for catching that. Fixed in gnome-keyring master:


commit 97b5a0d2f3602e2472a0a8231439d7aade907367
Author: Stef Walter <stefw@gnome.org>
Date:   Thu Mar 8 21:40:33 2012 +0100

    dbus: Fix changing keyring password
    
     * Fix various code paths during prompting for changing password
     * Regression due to prompting changes.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=671441