dbus: Fix changing keyring password

* Fix various code paths during prompting for changing password
 * Regression due to prompting changes.

https://bugzilla.gnome.org/show_bug.cgi?id=671441